sandbox/output
TicketDispenserTest.java:73: error: cannot find symbol
        TurnTicket previousTicket = dispenser.getVipTurnTicket();
                                             ^
  symbol:   method getVipTurnTicket()
  location: variable dispenser of type TicketDispenser
TicketDispenserTest.java:74: error: cannot find symbol
        TurnTicket newTicket = dispenser.getVipTurnTicket();
                                        ^
  symbol:   method getVipTurnTicket()
  location: variable dispenser of type TicketDispenser
2 errors
